--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -1,4 +1,55 @@
+#### ifstat
+
+> http://gael.roualland.free.fr/ifstat/
+
+	cd /mnt/src
+	wget http://gael.roualland.free.fr/ifstat/ifstat-1.1.tar.gz
+	tar -xvzf ifstat-1.1.tar.gz
+	cd ifstat-1.1
+	./configure
+	make
+	make install
+
+
+#### netcat
+
+> http://netcat.sourceforge.net/download.php
+
+	cd /mnt/src
+	wget http://sourceforge.net/projects/netcat/files/netcat/0.7.1/netcat-0.7.1.tar.gz
+	tar -xvzf netcat-0.7.1.tar.gz
+	cd netcat-0.7.1
+	./configure --prefix=/mnt/bin/netcat-0.7.1
+	make
+	make install
+	ln -s /mnt/bin/netcat-0.7.1/bin/nc /usr/bin/nc
+
+
+#### logrotate
+
+	# 创建文件 /etc/logrotate.d/tengine
+	# 内容如下：
+
+	/mnt/bin/tengine-2.0.3/logs/*.log {
+		daily
+		rotate 5
+		missingok
+		notifempty
+		sharedscripts
+		postrotate
+		if [ -f /mnt/bin/tengine-2.0.3/logs/nginx.pid ]; then
+			kill -USR1 `cat /mnt/bin/tengine-2.0.3/logs/nginx.pid`
+		fi
+		endscript
+	}
+
+
 #### SenchaSDKTools -- 用于 web 应用中 ExtJS 程序部署时压缩打包
+
+> https://www.sencha.com/products/sencha-cmd/
+
+	# 准备工作
+	yum install java-1.7.0-openjdk glibc.i686 libstdc++ libstdc++.i686
 
 	cd /mnt/src
 	wget http://cdn.sencha.io/sdk-tools/SenchaSDKTools-2.0.0-beta3-linux-x64.run
@@ -33,12 +84,16 @@
 	tar -xvjf phantomjs-1.9.8-linux-x86_64.tar.bz2
 	cp /usr/local/src/phantomjs-1.9.8-linux-x86_64/bin/phantomjs /usr/local/SenchaSDKTools-2.0.0-beta3/bin/phantom/bin/phantomjs
 
+
 #### YUICompressor
+
+> http://yui.github.io/yuicompressor/
 
 	cd /mnt/src
 	wget https://github.com/yui/yuicompressor/releases/download/v2.4.8/yuicompressor-2.4.8.jar
 	mkdir /mnt/bin/yuicompressor
 	mv yuicompressor-2.4.8.jar /mnt/bin/yuicompressor
+
 
 #### headless IB Gateway
 
@@ -62,7 +117,10 @@
 
 	export DISPLAY=:1 ; nohup /opt/IBController/IBControllerGatewayStart.sh >/root/ib-controller.log 2>&1 &
 
+
 #### phpMyAdmin -- 仅用于测试系统，不可用于生产系统！
+
+> https://www.phpmyadmin.net/
 
 	cd /mnt/src
 	wget https://files.phpmyadmin.net/phpMyAdmin/4.6.0/phpMyAdmin-4.6.0-all-languages.tar.gz
@@ -75,18 +133,13 @@
 	$cfg['blowfish_secret'] = '***'
 	$cfg['Servers'][$i]['host'] = '***';
 
-#### netcat
-
-	cd /mnt/src
-	wget http://sourceforge.net/projects/netcat/files/netcat/0.7.1/netcat-0.7.1.tar.gz
-	tar -xvzf netcat-0.7.1.tar.gz
-	cd netcat-0.7.1
-	./configure --prefix=/mnt/bin/netcat-0.7.1
-	make
-	make install
-	ln -s /mnt/bin/netcat-0.7.1/bin/nc /usr/bin/nc
 
 #### Subversion
+
+> https://subversion.apache.org/
+
+	# 准备工作
+	yum install apr-devel apr-util-devel libserf-devel
 
 	cd /mnt/src
 	wget http://mirrors.cnnic.cn/apache/subversion/subversion-1.8.15.tar.gz
@@ -100,6 +153,7 @@
 	make install
 
 	ln -s /mnt/bin/subversion-1.8.15/bin/svn /usr/bin/svn
+
 
 #### httpd 支持的 svn 服务器
 
@@ -117,3 +171,139 @@
 	# 增量备份和恢复
 	svnadmin dump /mnt/svn_root/myrepo -r 9133:9138 --incremental > myrepo-9133-9138.svn.dump
 	svnadmin load /mnt/svn_root/myrepo < myrepo-9133-9138.svn.dump
+
+
+#### tor -- 用于抓网页时为规避防刷机制而换 IP
+
+	yum install tor nc
+
+	groupadd torflip
+	useradd -g torflip -G torflip torflip
+
+	# 生成加密格式的密码，用于在后面的配置文件中限制对 tor control port 的访问：
+	tor --hash-password hello
+
+	# 修改 /etc/tor/torrc 设置如下内容：
+	SocksPort 0.0.0.0:9050
+	SocksPolicy accept 203.81.22.133/32		# from office
+	SocksPolicy reject *
+	ControlPort 9051
+	HashedControlPassword 16:920E3F848E675B4A608A9F9D7831AF26495589E685A58F4C2A39C5E3F9 # hello
+
+	# 创建 /home/torflip/torflip ，内容如下：
+	#!/bin/sh
+	echo -e "authenticate \"hello\"\nsignal newnym\nquit"|nc 127.0.0.1 9051
+	exit 0
+
+	# 设置 torflip 用户登录后自动执行上面这个文件：
+	chmod 700 /home/torflip/torflip
+	usermod -s /home/torflip/torflip
+
+
+#### XtraBackup
+
+> https://www.percona.com/software/mysql-database/percona-xtrabackup
+
+准备工作
+
+	yum install cmake gcc gcc-c++ libaio libaio-devel automake autoconf bzr bison libtool ncurses5-devel
+
+	# 设置 epel 仓库 (Extra Packages for Enterprise Linux)
+	# 编辑 /etc/yum.repos.d/epel.repo 文件内容
+	[epel]
+	name = CentOS $releasever - EPEL
+	baseurl=http://mirrors.ustc.edu.cn/fedora/epel/$releasever/$basearch/
+	enabled = 1
+	gpgkey = file:///etc/pki/rpm-gpg/RPM-GPG-KEY-epel
+	gpgcheck = 1
+
+	# 添加 epel key
+	wget -O /etc/pki/rpm-gpg/RPM-GPG-KEY-epel --no-check-certificate https://fedoraproject.org/static/217521F6.txt
+
+编译
+
+	cd /usr/local/src
+	wget http://www.percona.com/redir/downloads/XtraBackup/XtraBackup-2.0.0/source/percona-xtrabackup-2.0.0.tar.gz
+	tar -xvzf percona-xtrabackup-2.0.0.tar.gz
+	cd percona-xtrabackup-2.0.0
+	AUTO_DOWNLOAD="yes" ./utils/build.sh innodb55
+
+安装
+
+	cp ./innobackupex /usr/bin/innobackupex
+	cp ./src/xtrabackup_innodb55 /usr/bin/xtrabackup_55
+	chmod 755 /usr/bin/innobackupex /usr/bin/xtrabackup_55
+
+备份
+
+	# 用 root 帐号进行下面的操作，可以避免访问权限问题
+	PATH=$PATH:/usr/local/mysql-5.5.17/bin
+	innobackupex --defaults-file=/usr/local/config_repl/my.cnf --user=root --password=*** --socket=/tmp/mysql-repl.sock --slave-info --safe-slave-backup /data/db_backup/
+	innobackupex --defaults-file=/usr/local/config_repl/my.cnf --apply-log --use-memory=2G /data/db_backup/2012-06-14_18-57-57/
+	tar -cvzf 2012-06-14_18-57-57.tar.gz -C /data/db_backup 2012-06-14_18-57-57
+
+	# 或者（采用 stream 方式直接生成压缩包，这样备份得到的数据包是未经过 prepare 的）
+	innobackupex --defaults-file=/usr/local/config_repl/my.cnf --user=root --password=*** --socket=/tmp/mysql-repl.sock --slave-info --safe-slave-backup --stream=tar ./ | gzip - > /data/db_backup/`date +%Y%m%d_%H%M%S`.tar.gz
+
+还原
+
+	service mysqld-prod stop
+	mv /data/data-prod /data/data-prod-old
+	mkdir /data/data-prod
+
+	innobackupex --defaults-file=/usr/local/config_prod/my.cnf --copy-back -ibbackup='xtrabackup_55' /data/db_backup/2012-06-14_18-57-57/
+	# 或者（从 stream 方式得到的压缩包来还原数据文件）
+	tar -xvif /data/db_backup/20120615_175105.tar.gz -C /data/data-prod
+	innobackupex --defaults-file=/usr/local/config_prod/my.cnf --apply-log --use-memory=2G /data/data-prod/
+
+	chown -R mysql:mysql /data/data-prod
+	chmod -R 774 /data/data-prod
+	service mysqld-prod start
+	rm -Rf /data/data-prod-old
+
+	/usr/local/mysql-5.5.17/bin/mysql --user=root --password=*** --socket=/tmp/mysql-prod.sock
+	CHANGE MASTER TO
+		MASTER_HOST='192.168.0.2',
+		MASTER_PORT=3306,
+		MASTER_USER='root',
+		MASTER_PASSWORD='***',
+		MASTER_LOG_FILE='binlog-prod.000057',
+		MASTER_LOG_POS=892051438;
+	START SLAVE;
+
+
+#### apache-ab
+
+	/mnt/bin/httpd-2.4.10/bin/ab -n 100 -c 2 http://www.mysite.com/
+
+
+#### nmon & nmon2rrd
+
+> http://nmon.sourceforge.net/pmwiki.php
+
+	cd /mnt/src
+	mkdir nmon
+	cd nmon
+	wget http://sourceforge.net/projects/nmon/files/lmon14i.c
+	cc -o nmon lmon14i.c -g -O2 -D JFS -D GETUSER -Wall -D LARGEMEM -lncurses -g -D X86
+	mkdir /mnt/bin/nmon-14i
+	cp nmon /mnt/bin/nmon-14i
+
+	/mnt/bin/nmon-14i/nmon -F temp.nmon -s1 -c60
+
+	# 分析工具 nmon2rrd
+	# https://www.ibm.com/developerworks/community/wikis/home?lang=en#!/wiki/Power%20Systems/page/nmon2rrd
+	cd /mnt/src/nmon
+	wget https://www.ibm.com/developerworks/community/wikis/form/anonymous/api/wiki/61ad9cf2-c6a3-4d2c-b779-61ff0266d32a/page/190cda06-6ee0-48c7-9cb1-eeb0d14897ad/attachment/135bb742-4bcb-40d3-beb5-aba44d769f23/media/nmon2rrdv17a.tar
+	tar -xvf nmon2rrdv17a.tar
+	cc -O3 -o nmon2rrd nmon2rrd_17.c
+	cp nmon2rrd /mnt/bin/nmon-14i
+
+	cd /mnt/src/nmon
+	wget http://public.dhe.ibm.com/systems/power/community/wikifiles/nmon2rrdv16a.tar
+	tar -xvf nmon2rrdv16a.tar
+	cc -O3 -o nmon2rrd nmon2rrd_16.c
+	cp nmon2rrd /mnt/bin/nmon-14i
+
+	mkdir ./temp
+	/mnt/bin/nmon-14i/nmon2rrd -f temp.nmon -d ./temp -x
