--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -1,39 +1,6 @@
-参考资料
-========
-
-> 阿里云 ECS 挂载数据盘
-> http://help.aliyun.com/view/11108189_13435365.html
-
-> Install gcc4.8.2 in CentOS 6.5 by recompiling source tarball
-> http://www.codersvoice.com/a/webbase/install/08/202014/131.html
-
-> Nginx/php-fpm 优化设置
-> http://jeremymarc.github.io/2013/04/22/nginx-and-php-fpm-for-performance/
-
-> Lua 简明教程
-> http://coolshell.cn/articles/10739.html
-
-> lua-nginx-module 官方文档
-> https://github.com/openresty/lua-nginx-module
-
-> nginx 配置 HTTPS 服务器
-> http://nginx.org/cn/docs/http/configuring_https_servers.html
-
-> 加强 Nginx 的 SSL 安全
-> http://www.oschina.net/translate/strong_ssl_security_on_nginx
-
-> 把 Windows CA 根证书安装到 iPhone
-> http://www.cnblogs.com/qiuyi21/archive/2012/02/12/2347978.html
-
-> Compile Node.js 4.0 on CentOS 6
-> http://krisreeves.com/code/compile-node-js-4-0-on-centos-6/
-
-> Installing Node.js via package manager
-> https://nodejs.org/en/download/package-manager/
-
-
 准备工作
 ========
+
 
 #### 目录规划
 
@@ -45,6 +12,7 @@
 				+-- config/		网站相关的配置文件
 				+-- mysite.com/	网站
 				+-- ...			...
+
 
 #### 系统补丁
 
@@ -59,6 +27,7 @@
 
 	# for Tengine
 	yum install pcre-devel
+
 
 #### 创建用户账号
 
@@ -77,7 +46,11 @@
 服务器软件安装
 ==============
 
+
 #### gcc 4.8.2
+
+> Install gcc4.8.2 in CentOS 6.5 by recompiling source tarball
+> http://www.codersvoice.com/a/webbase/install/08/202014/131.html
 
 	cd /mnt/src
 	wget ftp://ftp.gnu.org/gnu/gcc/gcc-4.8.2/gcc-4.8.2.tar.gz
@@ -86,7 +59,10 @@
 	./configure --enable-languages=c,c++ --disable-multilib
 	make && make install
 
+
 #### openssl
+
+> https://www.openssl.org/source/
 
 	cd /mnt/src
 	wget https://www.openssl.org/source/openssl-1.1.0.tar.gz
@@ -96,7 +72,10 @@
 	make
 	make install
 
+
 #### mysql -- 仅用于支持编译 PHP，不用建库，不用启动脚本
+
+> http://dev.mysql.com/downloads/mysql/
 
 	cd /mnt/src
 	wget http://mirrors.sohu.com/mysql/MySQL-5.5/mysql-5.5.48.tar.gz
@@ -107,6 +86,7 @@
 	cmake .. -DCMAKE_INSTALL_PREFIX=/mnt/bin/mysql-5.5.48 -DMYSQL_DATADIR=/mnt/data/test
 	make
 	make install
+
 
 #### mysql -- 用于本机运行 mysql server
 
@@ -181,33 +161,52 @@
 	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;"
 	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'::1' IDENTIFIED BY '***' WITH GRANT OPTION;"
 
+
 #### php
 
+> https://secure.php.net/downloads.php
+
+	# 下载 PHP 源代码
 	cd /mnt/src
 	wget http://mirrors.sohu.com/php/php-5.6.5.tar.gz
 	tar -xvzf php-5.6.5.tar.gz
 
+	# 如果要把 apc 静态编译进 php
+	# http://pecl.php.net/package/apc
+	wget http://pecl.php.net/get/APC-3.1.13.tgz
+	tar -xzvf APC-3.1.13.tgz
+	mv APC-3.1.3p1 /mnt/src/php-5.6.5/ext/apc
+	# 编译 PHP 时增加 --enable-apc 选项
+
+	# 如果要把 xcache 静态编译进 php
 	wget http://xcache.lighttpd.net/pub/Releases/3.2.0/xcache-3.2.0.tar.gz
 	tar -xvzf xcache-3.2.0.tar.gz
 	mv xcache-3.2.0 /mnt/src/php-5.6.5/ext/xcache
+	# 编译 PHP 时增加 --enable-xcache 选项
 
+	# 如果要把 ssh2 静态编译进 php
 	wget http://pecl.php.net/get/ssh2-0.12.tgz
 	tar -xvzf ssh2-0.12.tgz
 	mv ssh2-0.12 /mnt/src/php-5.6.5/ext/ssh2
+	# 编译 PHP 时增加 --with-ssh2 选项
 
+	# 如果要把 phpredis 静态编译进 php
 	wget https://github.com/phpredis/phpredis/archive/2.2.7.tar.gz -O phpredis-2.2.7.tar.gz
 	tar -xvzf phpredis-2.2.7.tar.gz
 	mv phpredis-2.2.7 /mnt/src/php-5.6.5/ext/redis
+	# 编译 PHP 时增加 --enable-redis 选项
 
+	# 如果要把 gnupg 静态编译进 php
 	wget https://pecl.php.net/get/gnupg-1.3.6.tgz
 	tar -xvzf gnupg-1.3.6.tgz
 	mv gnupg-1.3.6 /mnt/src/php-5.6.5/ext/gnupg
+	# 编译 PHP 时增加 --with-gnupg 选项
 
 	cd php-5.6.5
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.5 --enable-xcache --enable-soap --with-pdo-mysql=/mnt/bin/mysql-5.5.48 --with-mysql=/mnt/bin/mysql-5.5.48 --with-openssl --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --with-config-file-path=/mnt/bin/php-5.6.5 --enable-shmop --with-ssh2 --enable-sockets --enable-mbstring --enable-redis --enable-zip --with-pic --with-gnupg --enable-fpm --with-fpm-user=daemon --with-fpm-group=deploy
+	./configure --prefix=/mnt/bin/php-5.6.5 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.5 --with-pdo-mysql=/mnt/bin/mysql-5.5.48 --with-mysql=/mnt/bin/mysql-5.5.48 --with-openssl=/mnt/src/openssl-1.1.0 --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --enable-xcache --with-ssh2 --enable-redis --with-gnupg
 	make clean
 	make
 	make install
@@ -261,7 +260,10 @@
 	chkconfig --add php-fpm
 	chkconfig --level 345 php-fpm on
 
+
 #### Tengine (Nginx)
+
+> http://tengine.taobao.org/download_cn.html
 
 	# 源代码编译安装 PCRE
 	cd /mnt/src
@@ -298,12 +300,14 @@
 
 	# 调整 /mnt/sites/config/tengine/fastcgi_params 配置文件
 	# 特别关注以下内容：
-	#   模拟 Apache 中的一个环境变量
-	fastcgi_param SCRIPT_URI $scheme://$http_host$request_uri;
-	#   不用写在 nginx.conf 中
-	fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-	#   隐藏服务器信息
-	fastcgi_param SERVER_SOFTWAREnginx;
+		# 模拟 Apache 中的一个环境变量
+		fastcgi_param SCRIPT_URI $scheme://$http_host$request_uri;
+
+		# 不用写在 nginx.conf 中
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+
+		# 隐藏服务器信息
+		fastcgi_param SERVER_SOFTWAREnginx;
 
 	# 创建启动脚本 /mnt/sites/config/tengine.sh
 	# 参考 http://wiki.nginx.org/RedHatNginxInitScript
@@ -348,7 +352,10 @@
 			ssl_session_timeout	10m;
 		}
 
+
 #### Redis
+
+> http://redis.io/download
 
 	cd /mnt/src
 	wget http://download.redis.io/releases/redis-2.8.19.tar.gz
@@ -393,7 +400,11 @@
 	Executable     : /usr/local/bin/redis-server
 	Cli Executable : /usr/local/bin/redis-cli
 
+
 #### nodejs —— 源代码编译安装
+
+> Compile Node.js 4.0 on CentOS 6
+> http://krisreeves.com/code/compile-node-js-4-0-on-centos-6/
 
 	cd /etc/yum.repos.d
 	wget http://linuxsoft.cern.ch/cern/scl/slc6-scl.repo
@@ -413,7 +424,11 @@
 	export NODE_PATH=/mnt/bin/node-4.2.1/lib/node_modules/npm
 	/mnt/bin/node-4.2.1/lib/node_modules/npm/bin/node-gyp-bin/node-gyp
 
+
 #### nodejs —— 二进制包安装
+
+> Installing Node.js via package manager
+> https://nodejs.org/en/download/package-manager/
 
 	curl --silent --location https://rpm.nodesource.com/setup_4.x | bash -
 	yum install nodejs
@@ -431,3 +446,27 @@
 	npm install -g mysql
 	npm install -g felixge/node-mysql
 
+
+其它参考资料
+============
+
+> 阿里云 ECS 挂载数据盘
+> http://help.aliyun.com/view/11108189_13435365.html
+
+> Nginx/php-fpm 优化设置
+> http://jeremymarc.github.io/2013/04/22/nginx-and-php-fpm-for-performance/
+
+> Lua 简明教程
+> http://coolshell.cn/articles/10739.html
+
+> lua-nginx-module 官方文档
+> https://github.com/openresty/lua-nginx-module
+
+> nginx 配置 HTTPS 服务器
+> http://nginx.org/cn/docs/http/configuring_https_servers.html
+
+> 加强 Nginx 的 SSL 安全
+> http://www.oschina.net/translate/strong_ssl_security_on_nginx
+
+> 把 Windows CA 根证书安装到 iPhone
+> http://www.cnblogs.com/qiuyi21/archive/2012/02/12/2347978.html
