--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -195,6 +195,16 @@
 > 系统状态查看工具Sysstat
 > http://www.linuxsir.org/main/?q=node/211
 
+修改主机名
+
+	# 修改 /etc/sysconfig/network 文件，重启系统后生效：
+	HOSTNAME=my-server
+
+	# 使用以下命令之一，新会话生效，重启系统后失效：
+	echo my-server > /proc/sys/kernel/hostname
+	hostname my-server
+	sysctl kernel.hostname=my-server
+
 查看系统性能
 
 	top
