--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -65,10 +65,10 @@
 > https://www.openssl.org/source/
 
 	cd /mnt/src
-	wget https://www.openssl.org/source/openssl-1.1.0.tar.gz
-	tar -xvzf openssl-1.1.0.tar.gz
-	cd openssl-1.1.0
-	./config --prefix=/mnt/bin/openssl-1.1.0 -fPIC no-shared
+	wget https://www.openssl.org/source/openssl-1.0.2h.tar.gz
+	tar -xvzf openssl-1.0.2h.tar.gz
+	cd openssl-1.0.2h
+	./config --prefix=/mnt/bin/openssl-1.0.2h -fPIC no-shared
 	make
 	make install
 
@@ -78,12 +78,12 @@
 > http://dev.mysql.com/downloads/mysql/
 
 	cd /mnt/src
-	wget http://mirrors.sohu.com/mysql/MySQL-5.5/mysql-5.5.48.tar.gz
-	tar -xvzf mysql-5.5.48.tar.gz
-	cd mysql-5.5.48
+	wget http://mirrors.sohu.com/mysql/MySQL-5.5/mysql-5.5.52.tar.gz
+	tar -xvzf mysql-5.5.52.tar.gz
+	cd mysql-5.5.52
 	mkdir bld
 	cd bld
-	cmake .. -DCMAKE_INSTALL_PREFIX=/mnt/bin/mysql-5.5.48 -DMYSQL_DATADIR=/mnt/data/test
+	cmake .. -DCMAKE_INSTALL_PREFIX=/mnt/bin/mysql-5.5.52 -DMYSQL_DATADIR=/mnt/data/test
 	make
 	make install
 
@@ -91,11 +91,11 @@
 #### mysql -- 用于本机运行 mysql server
 
 	# 创建数据库目录
-	cd /mnt/bin/mysql-5.5.48
+	cd /mnt/bin/mysql-5.5.52
 	scripts/mysql_install_db --user=mysql --datadir=/mnt/data/test
 
 	# 生成配置文件
-	cp /mnt/bin/mysql-5.5.48/support-files/my-default.cnf /mnt/sites/config/my.cnf
+	cp /mnt/bin/mysql-5.5.52/support-files/my-default.cnf /mnt/sites/config/my.cnf
 
 	# 手工修改 /mnt/sites/config/my.cnf 文件，关注以下内容：
 
@@ -134,7 +134,7 @@
 		innodb_lock_wait_timeout = 50
 
 	# 生成启动脚本
-	cp /mnt/bin/mysql-5.5.48/support-files/mysql.server /mnt/sites/config/mysql.server
+	cp /mnt/bin/mysql-5.5.52/support-files/mysql.server /mnt/sites/config/mysql.server
 
 	# 手工修改 /mnt/sites/config/mysql.server 文件，关注以下内容：
 
@@ -156,10 +156,10 @@
 	chkconfig --add mysqld-test
 
 	# 设置数据库中 mysql 用户的密码：
-	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.48/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'::1' IDENTIFIED BY '***' WITH GRANT OPTION;"
+	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' IDENTIFIED BY '***' WITH GRANT OPTION;"
+	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '***' WITH GRANT OPTION;"
+	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;"
+	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'::1' IDENTIFIED BY '***' WITH GRANT OPTION;"
 
 
 #### php
@@ -168,62 +168,62 @@
 
 	# 下载 PHP 源代码
 	cd /mnt/src
-	wget http://mirrors.sohu.com/php/php-5.6.5.tar.gz
-	tar -xvzf php-5.6.5.tar.gz
+	wget http://mirrors.sohu.com/php/php-5.6.9.tar.gz
+	tar -xvzf php-5.6.9.tar.gz
 
 	# 如果要把 apc 静态编译进 php
 	# http://pecl.php.net/package/apc
 	wget http://pecl.php.net/get/APC-3.1.13.tgz
 	tar -xzvf APC-3.1.13.tgz
-	mv APC-3.1.3p1 /mnt/src/php-5.6.5/ext/apc
+	mv APC-3.1.13 /mnt/src/php-5.6.9/ext/apc
 	# 编译 PHP 时增加 --enable-apc 选项
 
 	# 如果要把 xcache 静态编译进 php
 	wget http://xcache.lighttpd.net/pub/Releases/3.2.0/xcache-3.2.0.tar.gz
 	tar -xvzf xcache-3.2.0.tar.gz
-	mv xcache-3.2.0 /mnt/src/php-5.6.5/ext/xcache
+	mv xcache-3.2.0 /mnt/src/php-5.6.9/ext/xcache
 	# 编译 PHP 时增加 --enable-xcache 选项
 
 	# 如果要把 ssh2 静态编译进 php
 	wget http://pecl.php.net/get/ssh2-0.12.tgz
 	tar -xvzf ssh2-0.12.tgz
-	mv ssh2-0.12 /mnt/src/php-5.6.5/ext/ssh2
+	mv ssh2-0.12 /mnt/src/php-5.6.9/ext/ssh2
 	# 编译 PHP 时增加 --with-ssh2 选项
 
 	# 如果要把 phpredis 静态编译进 php
 	wget https://github.com/phpredis/phpredis/archive/2.2.7.tar.gz -O phpredis-2.2.7.tar.gz
 	tar -xvzf phpredis-2.2.7.tar.gz
-	mv phpredis-2.2.7 /mnt/src/php-5.6.5/ext/redis
+	mv phpredis-2.2.7 /mnt/src/php-5.6.9/ext/redis
 	# 编译 PHP 时增加 --enable-redis 选项
 
 	# 如果要把 gnupg 静态编译进 php
 	wget https://pecl.php.net/get/gnupg-1.3.6.tgz
 	tar -xvzf gnupg-1.3.6.tgz
-	mv gnupg-1.3.6 /mnt/src/php-5.6.5/ext/gnupg
+	mv gnupg-1.3.6 /mnt/src/php-5.6.9/ext/gnupg
 	# 编译 PHP 时增加 --with-gnupg 选项
 
-	cd php-5.6.5
+	cd php-5.6.9
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.5 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.5 --with-pdo-mysql=/mnt/bin/mysql-5.5.48 --with-mysql=/mnt/bin/mysql-5.5.48 --with-openssl=/mnt/src/openssl-1.1.0 --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --enable-xcache --with-ssh2 --enable-redis --with-gnupg
+	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --enable-xcache --with-ssh2 --enable-redis --with-gnupg
 	make clean
 	make
 	make install
-	ln -s /mnt/bin/php-5.6.5/bin/php /usr/bin/php
+	ln -s /mnt/bin/php-5.6.9/bin/php /usr/bin/php
 
 	# 获取 cacert.pem 文件
 	wget http://curl.haxx.se/ca/cacert.pem -O /mnt/sites/config/cacert.pem
 
 	# 生成配置文件
-	cp /mnt/src/php-5.6.5/php.ini-production /mnt/sites/config/php.ini
+	cp /mnt/src/php-5.6.9/php.ini-production /mnt/sites/config/php.ini
 
 	# 修改 /mnt/sites/config/php.ini 文件，关注以下内容：
 
 		[PHP]
 		expose_php = Off
 		short_open_tag = On
-		extension_dir = "/mnt/bin/php-5.6.5/ext/"
+		extension_dir = "/mnt/bin/php-5.6.9/ext/"
 		xcache.size = 128M
 		xcache.var_size = 128M
 		xcache.readonly_protection = On
@@ -237,7 +237,7 @@
 
 
 	# 创建 php-fpm 配置文件
-	cp /mnt/bin/php-5.6.5/etc/php-fpm.conf.default /mnt/sites/config/php-fpm.conf
+	cp /mnt/bin/php-5.6.9/etc/php-fpm.conf.default /mnt/sites/config/php-fpm.conf
 
 	# 手工修改 /mnt/sites/config/php-fpm.conf，关注以下内容：
 
@@ -259,6 +259,19 @@
 	chmod 755 /etc/rc.d/init.d/php-fpm
 	chkconfig --add php-fpm
 	chkconfig --level 345 php-fpm on
+
+
+#### ionCube Loader
+
+> https://www.ioncube.com/loaders.php
+
+	cd /mnt/src
+	wget http://downloads3.ioncube.com/loader_downloads/ioncube_loaders_lin_x86-64.tar.gz
+	tar -xvzf ioncube_loaders_lin_x86-64.tar.gz
+	cp /mnt/src/ioncube/ioncube_loader_lin_5.6.so /mnt/bin/php-5.6.9/ext
+
+	# 修改 /mnt/sites/config/php.ini 文件，增加以下内容：
+	zend_extension = /mnt/bin/php-5.6.9/ext/ioncube_loader_lin_5.6.so
 
 
 #### Tengine (Nginx)
@@ -294,7 +307,7 @@
 	mv /mnt/src/tengine-2.1.2/modules/lua-nginx-module-0.10.6 /mnt/src/tengine-2.1.2/modules/ngx_http_lua_module
 
 	cd tengine-2.1.2
-	./configure --prefix=/mnt/bin/tengine-2.1.2 --conf-path=/mnt/sites/config/tengine/nginx.conf --user=daemon --group=deploy --with-pcre=/mnt/src/pcre-8.36/ --with-openssl=/mnt/src/openssl-1.1.0 --with-http_spdy_module --with-http_concat_module --with-http_lua_module --with-luajit-inc=/mnt/bin/luajit-2.0.4/include/luajit-2.0 --with-luajit-lib=/mnt/bin/luajit-2.0.4/lib
+	./configure --prefix=/mnt/bin/tengine-2.1.2 --conf-path=/mnt/sites/config/tengine/nginx.conf --user=daemon --group=deploy --with-pcre=/mnt/src/pcre-8.36/ --with-openssl=/mnt/src/openssl-1.0.2h --with-http_spdy_module --with-http_concat_module --with-http_lua_module --with-luajit-inc=/mnt/bin/luajit-2.0.4/include/luajit-2.0 --with-luajit-lib=/mnt/bin/luajit-2.0.4/lib
 	make
 	make install
 
@@ -307,7 +320,7 @@
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
 
 		# 隐藏服务器信息
-		fastcgi_param SERVER_SOFTWAREnginx;
+		fastcgi_param SERVER_SOFTWARE nginx;
 
 	# 创建启动脚本 /mnt/sites/config/tengine.sh
 	# 参考 http://wiki.nginx.org/RedHatNginxInitScript
