--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -16,7 +16,7 @@
 
 #### 系统补丁
 
-	# for gcc 4.8.2
+	# for gcc 4.8.5
 	yum install gmp-devel mpfr-devel libmpc-devel
 
 	# for MySQL
@@ -24,9 +24,6 @@
 
 	# for PHP
 	yum install curl-devel libjpeg-devel libpng-devel giflib-devel freetype-devel perl-ExtUtils-Embed libssh2-devel libxml2 libxml2-devel gpgme-devel
-
-	# for Tengine
-	yum install pcre-devel
 
 
 #### 创建用户账号
@@ -47,15 +44,15 @@
 ==============
 
 
-#### gcc 4.8.2
+#### gcc 4.8.5
 
 > Install gcc4.8.2 in CentOS 6.5 by recompiling source tarball
 > http://www.codersvoice.com/a/webbase/install/08/202014/131.html
 
 	cd /mnt/src
-	wget ftp://ftp.gnu.org/gnu/gcc/gcc-4.8.2/gcc-4.8.2.tar.gz
-	tar -xvzf gcc-4.8.2.tar.gz
-	cd gcc-4.8.2
+	wget http://www.netgull.com/gcc/releases/gcc-4.8.5/gcc-4.8.5.tar.gz
+	tar -xvzf gcc-4.8.5.tar.gz
+	cd gcc-4.8.5
 	./configure --enable-languages=c,c++ --disable-multilib
 	make && make install
 
@@ -122,7 +119,7 @@
 		slow_query_log_file = slow-test.log
 
 		log-bin=binlog-test
-		binlog_format=mixed
+		binlog_format = mixed
 		sync_binlog = 4096
 
 		innodb_data_file_path = ibdata1:4G;ibdata2:4G:autoextend
@@ -156,10 +153,12 @@
 	chkconfig --add mysqld-test
 
 	# 设置数据库中 mysql 用户的密码：
-	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;"
-	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password=*** --socket=/tmp/mysql-test.sock -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'::1' IDENTIFIED BY '***' WITH GRANT OPTION;"
+	/mnt/bin/mysql-5.5.52/bin/mysql --user=root --password= --socket=/tmp/mysql-test.sock
+	GRANT ALL PRIVILEGES ON *.* TO 'root'@'localhost' IDENTIFIED BY '***' WITH GRANT OPTION;
+	GRANT ALL PRIVILEGES ON *.* TO 'root'@'127.0.0.1' IDENTIFIED BY '***' WITH GRANT OPTION;
+	GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' IDENTIFIED BY '***' WITH GRANT OPTION;
+	GRANT ALL PRIVILEGES ON *.* TO 'root'@'::1' IDENTIFIED BY '***' WITH GRANT OPTION;
+	FLUSH PRIVILEGES;
 
 
 #### php
@@ -230,11 +229,24 @@
 		xcache.mmap_path = "/tmp/xcache"
 		xcache.admin.user = "root"
 		xcache.admin.pass = "***"
+
 		[Date]
 		date.timezone = Asia/Shanghai
+
 		[openssl]
 		openssl.cafile=/mnt/sites/config/cacert.pem
 
+		[MySQL]
+		mysql.default_socket = /tmp/mysql-test.sock
+
+		[MySQLi]
+		mysqli.default_socket = /tmp/mysql-test.sock
+
+		[Pdo_mysql]
+		pdo_mysql.default_socket = /tmp/mysql-test.sock
+
+		# 当客户端（PHP）以 localhost 进行连接时，实际是通过 unix socket 连接的。
+		# 而以 127.0.0.1 进行连接时，则会使用 TCP/IP。
 
 	# 创建 php-fpm 配置文件
 	cp /mnt/bin/php-5.6.9/etc/php-fpm.conf.default /mnt/sites/config/php-fpm.conf
