--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -314,6 +314,8 @@
 
 #### 创建 Swap 空间
 
+> 开启 Swap 可能会导致服务器性能下降
+
 > Linux Add a Swap File – Howto
 > http://www.cyberciti.biz/faq/linux-add-a-swap-file-howto/
 
@@ -331,19 +333,22 @@
 	:MY-Firewall-1-INPUT - [0:0]
 	-A INPUT -j MY-Firewall-1-INPUT
 	-A FORWARD -j MY-Firewall-1-INPUT
+
 	-A MY-Firewall-1-INPUT -i lo -j ACCEPT
 	-A MY-Firewall-1-INPUT -p icmp --icmp-type any -j ACCEPT
 	-A MY-Firewall-1-INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
 
-	# allow ssh access
-	-A MY-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
+	# allow everything from office
+	-A MY-Firewall-1-INPUT -s 203.81.22.133 -j ACCEPT
 
 	# allow web site
 	-A MY-Firewall-1-INPUT -p tcp --dport 80 -j ACCEPT
 	-A MY-Firewall-1-INPUT -p tcp --dport 443 -j ACCEPT
 
-	# allow access from office
-	-A MY-Firewall-1-INPUT -s 203.81.22.133 -j ACCEPT
+	# allow ssh access up to 3 connections per minute
+	-A MY-Firewall-1-INPUT -p tcp --dport 22 -m state --state NEW -m recent --set
+	-A MY-Firewall-1-INPUT -p tcp --dport 22 -m state --state NEW -m recent --update --seconds 60 --hitcount 4 -j DROP
+	-A MY-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 22 -j ACCEPT
 
 	-A MY-Firewall-1-INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
 	-A MY-Firewall-1-INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
