--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -23,7 +23,7 @@
 	yum install zlib-devel cmake ncurses-devel
 
 	# for PHP
-	yum install curl-devel libjpeg-devel libpng-devel giflib-devel freetype-devel perl-ExtUtils-Embed libssh2-devel libxml2 libxml2-devel gpgme-devel
+	yum install curl-devel libjpeg-devel libpng-devel giflib-devel freetype-devel perl-ExtUtils-Embed libssh2-devel libxml2 libxml2-devel gpgme-devel libmcrypt-devel
 
 
 #### 创建用户账号
@@ -205,7 +205,7 @@
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --enable-xcache --with-ssh2 --enable-redis --with-gnupg
+	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-mysqli=/mnt/bin/mysql-5.5.52/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg
 	make clean
 	make
 	make install
