--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -139,20 +139,24 @@
 > https://subversion.apache.org/
 
 	# 准备工作
+	yum erase subversion
 	yum install apr-devel apr-util-devel libserf-devel
 
 	cd /mnt/src
-	wget http://mirrors.cnnic.cn/apache/subversion/subversion-1.8.15.tar.gz
-	tar -xvzf subversion-1.8.15.tar.gz
+	wget http://mirrors.cnnic.cn/apache/subversion/subversion-1.9.4.tar.gz
+	tar -xvzf subversion-1.9.4.tar.gz
 	wget http://www.sqlite.org/sqlite-amalgamation-3071501.zip
-	mkdir subversion-1.8.15/sqlite-amalgamation
-	unzip -j sqlite-amalgamation-3071501.zip sqlite-amalgamation-3071501/sqlite3ext.h sqlite-amalgamation-3071501/sqlite3.h sqlite-amalgamation-3071501/sqlite3.c -d subversion-1.8.15/sqlite-amalgamation
-	cd subversion-1.8.15
-	./configure --prefix=/mnt/bin/subversion-1.8.15
+	mkdir subversion-1.9.4/sqlite-amalgamation
+	unzip -j sqlite-amalgamation-3071501.zip sqlite-amalgamation-3071501/sqlite3ext.h sqlite-amalgamation-3071501/sqlite3.h sqlite-amalgamation-3071501/sqlite3.c -d subversion-1.9.4/sqlite-amalgamation
+	cd subversion-1.9.4
+	./configure
+	make
+	make install
+	./configure --prefix=/mnt/bin/subversion-1.9.4
 	make
 	make install
 
-	ln -s /mnt/bin/subversion-1.8.15/bin/svn /usr/bin/svn
+	ln -s /mnt/bin/subversion-1.9.4/bin/svn /usr/bin/svn
 
 
 #### httpd 支持的 svn 服务器
