--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -130,6 +130,10 @@
 	grep -i SATA /boot/config-`uname -r`
 	lsmod | egrep 'ata_piix|libata'
 
+按文件名查找文件
+
+	find / -name libzip*
+
 分别设置目录/文件的访问权限
 
 	find . -type d -exec chmod 774 {} \;
@@ -232,6 +236,19 @@
 
 	# 修改 .bashrc 文件，在末尾加上如下内容：
 	echo 'ALERT - Root Shell Access my-server.com on:' `date` `who` | mail -s "Alert: Root Access from `who | cut -d"(" -f2 | cut -d")" -f1`" email@abc.com
+
+
+#### 开发工具
+
+查看一个程序文件的引用依赖
+
+	ldd /usr/lib64/libzip.so
+	ldd /mnt/bin/php-5.6.9/bin/php
+
+查看一个库文件的输出列表
+
+	nm -D /usr/lib64/libzip.so
+	nm /usr/lib64/libzip.a
 
 
 #### rsync
