--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -161,7 +161,7 @@
 	FLUSH PRIVILEGES;
 
 
-#### php
+#### PHP
 
 > https://secure.php.net/downloads.php
 
@@ -201,11 +201,33 @@
 	mv gnupg-1.3.6 /mnt/src/php-5.6.9/ext/gnupg
 	# 编译 PHP 时增加 --with-gnupg 选项
 
+	# 如果要把 zip 静态编译进 php
+	wget https://nih.at/libzip/libzip-1.1.3.tar.gz
+	tar -xvzf libzip-1.1.3.tar.gz
+	cd libzip-1.1.3
+	./configure
+	make
+	make install
+	cp /usr/local/lib/libzip/include/zipconf.h /usr/local/include/zipconf.h
+	cd ..
+	# 编译 PHP 时增加 --enable-zip --with-zlib --with-libzip 选项
+
+	# 如果要把 svn 静态编译进 php
+	wget http://pecl.php.net/get/svn-1.0.3.tgz
+	tar -xvzf svn-1.0.3.tgz
+	mv svn-1.0.3 /mnt/src/php-5.6.9/ext/svn
+	# 编译 PHP 时增加 --with-svn 选项
+	#
+	# 注意：源代码编译安装 subversion 时最好使用缺省安装位置，否则编译 php svn 的时候会遇到很多麻烦。
+	#
+	# 注意：svn-1.0.3/svn.c 有两处使用了 C99 语法，会导致编译时报 error，修改后再编译即可。
+	#       或者 export CFLAGS="-std=c99" 但似乎这又会导致 ssh2 连接时报错 :(
+
 	cd php-5.6.9
 	rm -f configure
 	touch ac*
 	./buildconf --force
-	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-mysqli=/mnt/bin/mysql-5.5.52/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-zlib --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --enable-zip --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg
+	./configure --prefix=/mnt/bin/php-5.6.9 --with-fpm-user=daemon --with-fpm-group=deploy --with-config-file-path=/mnt/bin/php-5.6.9 --with-pdo-mysql=/mnt/bin/mysql-5.5.52 --with-mysql=/mnt/bin/mysql-5.5.52 --with-mysqli=/mnt/bin/mysql-5.5.52/bin/mysql_config --with-openssl=/mnt/bin/openssl-1.0.2h --enable-soap --with-curl --with-gd --with-jpeg-dir=/usr/lib --with-freetype-dir=/usr/lib --enable-shmop --enable-sockets --enable-mbstring --with-pic --enable-fpm --with-mcrypt --enable-xcache --with-ssh2 --enable-redis --with-gnupg --enable-zip --with-zlib --with-libzip --with-svn
 	make clean
 	make
 	make install
