--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -134,6 +134,10 @@
 
 	find / -name libzip*
 
+查找所有包含特定字符串的文件
+
+	grep -rn /usr/local/include/subversion-1/ -e 'get_username_provider'
+
 分别设置目录/文件的访问权限
 
 	find . -type d -exec chmod 774 {} \;
