--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -142,21 +142,33 @@
 	yum erase subversion
 	yum install apr-devel apr-util-devel libserf-devel
 
+	# 先编译安装 scons-local 用于编译 serf
 	cd /mnt/src
+	wget http://prdownloads.sourceforge.net/scons/scons-local-2.3.0.tar.gz
+	mkdir /mnt/bin/scons-local-2.3.0
+	tar -xvzf scons-local-2.3.0.tar.gz -C /mnt/bin/scons-local-2.3.0
+
+	# 编译安装 serf 用于支持 libsvn_ra_serf
+	wget https://www.apache.org/dist/serf/serf-1.3.9.tar.bz2
+	tar -xvjf serf-1.3.9.tar.bz2
+	cd serf-1.3.9
+	/mnt/bin/scons-local-2.3.0/scons.py PREFIX=/mnt/bin/serf-1.3.9
+	/mnt/bin/scons-local-2.3.0/scons.py install
+	ln -s /mnt/bin/serf-1.3.9/lib/libserf-1.so.1.3.0 /usr/local/lib/libserf-1.so.1
+	ln -s /mnt/bin/serf-1.3.9/lib/libserf-1.so.1.3.0 /usr/local/lib/libserf-1.so
+
+	# 编译安装 subversion
 	wget http://mirrors.cnnic.cn/apache/subversion/subversion-1.9.4.tar.gz
 	tar -xvzf subversion-1.9.4.tar.gz
 	wget http://www.sqlite.org/sqlite-amalgamation-3071501.zip
 	mkdir subversion-1.9.4/sqlite-amalgamation
 	unzip -j sqlite-amalgamation-3071501.zip sqlite-amalgamation-3071501/sqlite3ext.h sqlite-amalgamation-3071501/sqlite3.h sqlite-amalgamation-3071501/sqlite3.c -d subversion-1.9.4/sqlite-amalgamation
 	cd subversion-1.9.4
-	./configure
-	make
-	make install
-	./configure --prefix=/mnt/bin/subversion-1.9.4
+	./configure --with-serf=/mnt/bin/serf-1.3.9
 	make
 	make install
 
-	ln -s /mnt/bin/subversion-1.9.4/bin/svn /usr/bin/svn
+	# 如果 subversion 不使用缺省安装位置的话，编译 php svn 的时候会遇到很多麻烦
 
 
 #### httpd 支持的 svn 服务器
