--- a/linux-server/服务器软件.md
+++ b/linux-server/服务器软件.md
@@ -222,6 +222,9 @@
 	#
 	# 注意：svn-1.0.3/svn.c 有两处使用了 C99 语法，会导致编译时报 error，修改后再编译即可。
 	#       或者 export CFLAGS="-std=c99" 但似乎这又会导致 ssh2 连接时报错 :(
+	#
+	# 注意：php 中调用 svn_update() 时，如果有文件名中存在非 ASCII 字符，会导致失败。但如果最开始
+	#       checkout 的版本中不包含这种文件，此后 svn_update() 调用不会失败，只是相应的文件不会出现。
 
 	cd php-5.6.9
 	rm -f configure
