--- a/linux-server/常用维护命令.md
+++ b/linux-server/常用维护命令.md
@@ -60,7 +60,6 @@
 	yum search zlib
 	yum info zlib-devel
 
-
 安装、卸载
 
 	yum install freetype-devel
@@ -100,6 +99,10 @@
 
 	# 检查源中提供的 package
 	yum list | grep epel
+
+检查一个安装包里包含的所有文件
+
+	rpm -ql zlib-devel
 
 
 #### 设备、文件系统
