--- a/linux-server/工具软件.md
+++ b/linux-server/工具软件.md
@@ -189,6 +189,46 @@
 	svnadmin load /mnt/svn_root/myrepo < myrepo-9133-9138.svn.dump
 
 
+#### WebSVN
+
+> http://www.websvn.info/
+
+下载 WebSVN 并部署。
+
+	cd /mnt/src
+	wget http://websvn.tigris.org/files/documents/1380/49056/websvn-2.3.3.tar.gz
+	tar -xvzf websvn-2.3.3.tar.gz
+	mv websvn-2.3.3 /var/www/html/websvn
+	chown -R apache /var/www/html/websvn
+	cp /var/www/html/websvn/include/distconfig.php /var/www/html/websvn/include/config.php
+
+
+	# 修改 /var/www/html/websvn/include/config.php 文件。
+
+	# 添加版本库
+	$config->addRepository(...);
+
+	# 设置访问授权
+	$config->useAuthenticationFile(...);
+
+安装 mod_fcgid
+
+	yum install mod_fcgid
+
+修改 /etc/httpd/conf.d/fcgid.conf 文件，支持 PHP 和 WebSVN。
+
+	FcgidInitialEnv PHPRC /mnt/sites/config
+	AddHandler fcgid-script .php
+	FcgidWrapper /mnt/bin/php-5.6.5/bin/php-cgi .php
+
+	<Location /websvn>
+		AuthType Basic
+		Require valid-user
+		Options ExecCGI
+		DirectoryIndex index.php
+	</Location>
+
+
 #### tor -- 用于抓网页时为规避防刷机制而换 IP
 
 	yum install tor nc
