--- a/kb/几个时间函数跟时区的关系.md
+++ b/kb/几个时间函数跟时区的关系.md
@@ -12,10 +12,17 @@
 有些跟时间相关的函数（比如 `mktime()` 和 `localtime()` 等）在逻辑上跟时区相关，而函数的
 参数中并没有这个信息，这就需要有一个“当前时区”的概念。
 
-在 Windows 和 Linux 系统中，都是用 [TZ](http://www.ibm.com/support/knowledgecenter/zh/SSGU8G_12.1.0/com.ibm.sqlr.doc/ids_sqr_509.htm) 环境变量来表示本进程的“当前时区”。
+在 Windows 和 Linux 系统中，都是用`TZ 环境变量`来表示本进程的“当前时区”。
 
-跟设置环境变量相关的 C 函数，在 Windows 下有 `getenv()`、`_putenv()`，在 Linux 下
-有 `getenv()`、`putenv()`、`setenv()`、`unsetenv()` 等。
+> TZ 环境变量 - http://www.gnu.org/software/libc/manual/html_node/TZ-Variable.html
+
+举例来说，美国东部时间可以用 `EST+5EDT` 来表示。
+
+如果当前进程不存在该环境变量的话，则使用系统缺省设置。
+
+跟设置环境变量相关的 C 函数，在 Windows 下有 `getenv()`、`_putenv()`，在 Linux 下有
+`getenv()`、`putenv()`、`setenv()`、`unsetenv()` 等。
+
 
 ## 夏令时（Daylight Saving Time, DST）
 
@@ -95,8 +102,9 @@
 
 	struct tm *localtime(const time_t *timep);
 
-此函数跟 `gmtime()` 类似，也是用于把一个时间戳代表的时间转换成分解形式，只是转换的结果
-为当前时区值。
+此函数跟 `gmtime()` 类似，也是用于把一个时间戳代表的时间转换成分解形式，只是转换的结果为
+当前时区值。
 
-需要特别注意的一点是，如果时区信息中要求“需要考虑夏令时”，则返回的分解形式为夏令时
-表示，并通过 `tm_isdst` 指明，这一点跟 `mktime()` 是一样的。
+需要特别注意的一点是，如果时区信息中要求“需要考虑夏令时”，而且该时区确实存在夏令时规则，
+而且该时间点处于夏令时时段内，则返回的分解形式为夏令时表示，并通过 `tm_isdst` 指明，这一点跟
+`mktime()` 是一样的。
