--- a/kb/几个时间函数跟时区的关系.md
+++ b/kb/几个时间函数跟时区的关系.md
@@ -1,5 +1,6 @@
 # 几个时间函数跟时区的关系
 
+
 ## UNIX 时间戳
 
 用一个整数值表示一个时间点，它的含义为“从 1970-1-1 00:00:00 到这个时间点的秒数”。
@@ -16,12 +17,16 @@
 
 > TZ 环境变量 - http://www.gnu.org/software/libc/manual/html_node/TZ-Variable.html
 
-举例来说，美国东部时间可以用 `EST+5EDT` 来表示。
+举例来说，`美国东部时间`可以用 `EST+5EDT` 来表示。
 
-如果当前进程不存在该环境变量的话，则使用系统缺省设置。
+如果当前进程不存在该环境变量的话，则使用系统缺省设置。在 CentOS 6 系统中，缺省的时区
+设置由 `/etc/localtime` 文件给出。
 
 跟设置环境变量相关的 C 函数，在 Windows 下有 `getenv()`、`_putenv()`，在 Linux 下有
 `getenv()`、`putenv()`、`setenv()`、`unsetenv()` 等。
+
+操作系统中有一组完整的信息，包含了所有时区的详细信息，包括有关夏令时的详细规则。比如
+CentOS 6 系统中，这些信息就保存在 `/usr/share/zoneinfo/` 中。
 
 
 ## 夏令时（Daylight Saving Time, DST）
